fix: Monitoring의 요소 minwidth를 1200px로 설정, overflow: auto 삭제

--- a/src/styles/MONITORING.css
+++ b/src/styles/MONITORING.css
@@ -42,6 +42,7 @@
 
 .moni-workloads-table{
     width: calc(100vw / 100 * 77);
+    min-width: 100%;
 }
 
 .moni-workloads-table > div > table > thead > tr > th:first-child {
